--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,25 +4,45 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
-
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Parse Response",
-      "program": "${workspaceFolder}/parceResponse.js"
-    },
     {
       "type": "node",
       "request": "launch",
       "name": "Index",
-      "program": "${workspaceFolder}/index.js"
+      "program": "${workspaceFolder}/src/index.js"
     },
     {
       "type": "node",
       "request": "launch",
       "name": "Test",
-      "program": "${workspaceFolder}/AuthKeyExchangeTest.js"
+      "program": "${workspaceFolder}/src/AuthKeyExchangeTest.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha All",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "${workspaceFolder}/src/**/test.js"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Mocha Current File",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "args": [
+        "--timeout",
+        "999999",
+        "--colors",
+        "${file}"
+      ],
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen"
     }
   ]
 }
