--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "big-number": "^2.0.0",
     "bigi": "^1.4.2",
-    "leemon": "^6.2.0"
+    "leemon": "^6.2.0",
+    "randombytes": "^2.1.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
