--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aes-js": "^3.1.2",
     "big-number": "^2.0.0",
     "bigi": "^1.4.2",
     "leemon": "^6.2.0",
