Fix launch options

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -58,7 +58,7 @@
         "--colors",
         "${workspaceFolder}/src/**/test.js"
       ],
-      "console": "integratedTerminal",
+      "console": "internalConsole",
       "internalConsoleOptions": "neverOpen"
     },
     {
