--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aes-js": "^3.1.2",
     "big-number": "^2.0.0",
     "bigi": "^1.4.2",
+    "crypto-hash": "^1.2.2",
     "leemon": "^6.2.0",
     "node-forge": "^0.9.1",
     "randombytes": "^2.1.0"
