--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "aes-js": "^3.1.2",
-    "big-number": "^2.0.0",
-    "bigi": "^1.4.2",
+    "big-integer": "^1.6.48",
     "crypto-hash": "^1.2.2",
     "leemon": "^6.2.0",
     "node-forge": "^0.9.1",
