--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,28 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Web (Chrome)",
+      "url": "http://localhost:1234/",
+      "trace": true,
+      "webRoot": "${workspaceFolder}/src/",
+      "breakOnLoad": true,
+      "sourceMapPathOverrides": {
+        "*": "${webRoot}/*"
+      }
+    },
     {
       "type": "node",
       "request": "launch",
-      "name": "Index",
+      "name": "Index (Node)",
       "program": "${workspaceFolder}/src/index.js"
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Index WS",
+      "name": "Index WS (Node)",
       "program": "${workspaceFolder}/src/index-ws.js"
     },
     {
@@ -40,12 +51,6 @@
       "request": "launch",
       "name": "Prepare Public Keys",
       "program": "${workspaceFolder}/scripts/preparePublicKeys.js"
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "AES-IGE Orig",
-      "program": "${workspaceFolder}/src/crypto/aes_ige_orig.js"
     },
     {
       "type": "node",
