--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/**/test.js",
+    "test": "parcel test/test.html",
     "prepare-public-keys": "node scripts/preparePublicKeys.js",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
