--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "parcel src/test/test.html --https",
     "prepare-public-keys": "node scripts/preparePublicKeys.js",
-    "start": "parcel src/index.html",
+    "start": "parcel src/index.html --https",
     "build": "parcel build src/index.html"
   },
   "keywords": [],
