--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Web (Chrome)",
-      "url": "http://localhost:1234/",
+      "url": "https://localhost:1234/",
       "trace": true,
       "webRoot": "${workspaceFolder}/src/",
       "breakOnLoad": true,
